// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/integrations/InstalledCommand should call onDelete function 1`] = `
<div>
  <div
    class="backstage-list__item"
  >
    <div
      class="item-details"
    >
      <div
        class="item-details__row d-flex flex-column flex-md-row justify-content-between"
      >
        <div
          class="item-details__name"
        >
          <strong>
            display_name
          </strong>
        </div>
        <span
          class="item-details__trigger"
        >
          - /trigger auto_complete_hint
        </span>
        <div
          class="item-actions"
        >
          <button
            class="style--none color--link"
          >
            Regenerate Token
          </button>
           - 
          <a
            href="/team_name/integrations/commands/edit?id=r5tpgt4iepf45jt768jz84djic"
          >
            Edit
          </a>
           - 
          <button>
            Delete
          </button>
        </div>
      </div>
      <div
        class="item-details__row"
      >
        <span
          class="item-details__description"
        >
          description
        </span>
      </div>
      <div
        class="item-details__row"
      >
        <span
          class="item-details__token"
        >
          Token: 
          <code>
            testToken
          </code>
          <button
            aria-label="Copy Token"
            class="_icon-button_mytxt_2 _icon-button--size-x-small_mytxt_55 ml-2"
            data-testid="copyText"
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_mytxt_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-12_1i355_30"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="14"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
        </span>
      </div>
      <div
        class="item-details__row"
      >
        <span
          class="item-details__creation"
        >
          Created by username on Monday, July 10, 2017
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/integrations/InstalledCommand should call onRegenToken function 1`] = `
<div>
  <div
    class="backstage-list__item"
  >
    <div
      class="item-details"
    >
      <div
        class="item-details__row d-flex flex-column flex-md-row justify-content-between"
      >
        <div
          class="item-details__name"
        >
          <strong>
            display_name
          </strong>
        </div>
        <span
          class="item-details__trigger"
        >
          - /trigger auto_complete_hint
        </span>
        <div
          class="item-actions"
        >
          <button
            class="style--none color--link"
          >
            Regenerate Token
          </button>
           - 
          <a
            href="/team_name/integrations/commands/edit?id=r5tpgt4iepf45jt768jz84djic"
          >
            Edit
          </a>
           - 
          <button>
            Delete
          </button>
        </div>
      </div>
      <div
        class="item-details__row"
      >
        <span
          class="item-details__description"
        >
          description
        </span>
      </div>
      <div
        class="item-details__row"
      >
        <span
          class="item-details__token"
        >
          Token: 
          <code>
            testToken
          </code>
          <button
            aria-label="Copy Token"
            class="_icon-button_mytxt_2 _icon-button--size-x-small_mytxt_55 ml-2"
            data-testid="copyText"
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_mytxt_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-12_1i355_30"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="14"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
        </span>
      </div>
      <div
        class="item-details__row"
      >
        <span
          class="item-details__creation"
        >
          Created by username on Monday, July 10, 2017
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/integrations/InstalledCommand should match snapshot 1`] = `
<div>
  <div
    class="backstage-list__item"
  >
    <div
      class="item-details"
    >
      <div
        class="item-details__row d-flex flex-column flex-md-row justify-content-between"
      >
        <div
          class="item-details__name"
        >
          <strong>
            display_name
          </strong>
        </div>
        <span
          class="item-details__trigger"
        >
          - /trigger auto_complete_hint
        </span>
      </div>
      <div
        class="item-details__row"
      >
        <span
          class="item-details__description"
        >
          description
        </span>
      </div>
      <div
        class="item-details__row"
      >
        <span
          class="item-details__token"
        >
          Token: 
          <code>
            testToken
          </code>
          <button
            aria-label="Copy Token"
            class="_icon-button_mytxt_2 _icon-button--size-x-small_mytxt_55 ml-2"
            data-testid="copyText"
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_mytxt_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-12_1i355_30"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="14"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
        </span>
      </div>
      <div
        class="item-details__row"
      >
        <span
          class="item-details__creation"
        >
          Created by username on Monday, July 10, 2017
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/integrations/InstalledCommand should match snapshot, not autocomplete, no display_name/description/auto_complete_hint 1`] = `
<div>
  <div
    class="backstage-list__item"
  >
    <div
      class="item-details"
    >
      <div
        class="item-details__row d-flex flex-column flex-md-row justify-content-between"
      >
        <div
          class="item-details__name"
        >
          <strong>
            command_display_name
          </strong>
        </div>
        <span
          class="item-details__trigger"
        >
          - /trigger
        </span>
      </div>
      <div
        class="item-details__row"
      >
        <span
          class="item-details__description"
        >
          command_description
        </span>
      </div>
      <div
        class="item-details__row"
      >
        <span
          class="item-details__token"
        >
          Token: 
          <code>
            testToken
          </code>
          <button
            aria-label="Copy Token"
            class="_icon-button_mytxt_2 _icon-button--size-x-small_mytxt_55 ml-2"
            data-testid="copyText"
            type="button"
          >
            <span
              aria-hidden="true"
              class="_icon-button__icon-slot_mytxt_33"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-12_1i355_30"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="14"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </button>
        </span>
      </div>
      <div
        class="item-details__row"
      >
        <span
          class="item-details__creation"
        >
          Created by username on Monday, July 10, 2017
        </span>
      </div>
    </div>
  </div>
</div>
`;
